fixed m3u and pls audio stream support
Signed-off-by: Kai Kreuzer <kai@openhab.org>